# bp-meishi

./: .dockerignore  .env  .gcloudignore  .gitignore  App.test.tsx  App.tsx  DEPLOY_INSTRUCTIONS.md  DOCUMENT_AI_SETUP.md  Dockerfile  Dockerfile.web  ErrorBoundary.tsx  PIPELINE_EVIDENCE.txt  PROMPT_TEMPLATES_DTP_JA_COMPLETE.md  append.cjs  append_endpoints.py  append_main.py  build_error.txt  build_error_utf8.txt  cloudbuild-api.yaml  cloudbuild.yaml  constants.ts  endpoints.txt  eslint.config.js  help.txt  help8.txt  help9.txt  index.css  index.html  index.tsx  last_err.txt  last_err_utf8.txt  last_run_logs.txt  last_run_logs_utf8.txt  logs.txt  logs3.txt  metadata.json  nginx.conf  package-lock.json  package.json  rag_pipeline_setup.sql  (+16 more)
.claude/: settings.json  settings.local.json
backend/: Dockerfile  main.py  main_legacy.py  main_old.py  requirements.txt
components/: AIDtpAgentWorkspace.tsx  AutoFitText.tsx  CardPreview.tsx  ChatPanel.tsx  CommercialPublishing.tsx  Dashboard.tsx  DetectionReview.tsx  Header.tsx  MeishiBuildPage.tsx  MeishiEditor.tsx  MeishiExtractPage.tsx  MeishiTemplate.ts  PDFUpload.tsx  PdfEditor.tsx  ProgressOverlay.tsx  Sidebar.tsx  TemplateDesigner.tsx  Toast.tsx  ToolWorkspace.tsx  VerifyCanvas.tsx  VerifyScreen.tsx  fontHelper.ts
mcp-bridge/: package-lock.json  package.json  server.js
mcp/adb-mcp-main/adb-mcp-main/mcp/: ae-mcp.py  ai-mcp.py  core.py  fonts.py  id-mcp.py  logger.py  pr-mcp.py  ps-batch-play.py  ps-mcp.py  pyproject.toml  requirements.txt  socket_client.py
services/: agent.ts  ai.ts  api.ts  bp-meishi.code-workspace  (+14 more)
(+108 files in other folders)
